@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Set HTTP::Body::tmpdir. Permissions in production
+
 0.8.1     2016-03-05 20:16:49
           - Better exception message for uri_params
 
